--- a/workspace/common/templates/ui/partials/navbar.html
+++ b/workspace/common/templates/ui/partials/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100 border-b border-base-300 backdrop-blur-lg bg-opacity-80 sticky top-0 z-50">
+<div class="navbar bg-base-100 border-b border-base-300 backdrop-blur-lg bg-opacity-80 sticky top-0 z-50 min-h-[3.25rem] py-1">
   <div class="{% if navbar_full_width %}container mx-auto max-w-none{% else %}container mx-auto{% endif %}">
     <!-- Brand -->
     <div class="flex-none">
