feat(files): add recent files view + fix layout with a lot of items

--- a/workspace/common/templates/base.html
+++ b/workspace/common/templates/base.html
@@ -37,7 +37,8 @@
 
   <!-- Generic Dialogs -->
   {% include "ui/partials/dialogs.html" %}
-
+  <!-- Toast notifications -->
+  {% include 'ui/partials/toasts.html' %}
   <!-- Initialize Lucide Icons -->
   <script>
     document.addEventListener('DOMContentLoaded', function() {
