--- a/workspace/files/ui/templates/files/ui/partials/folder_content.html
+++ b/workspace/files/ui/templates/files/ui/partials/folder_content.html
@@ -11,8 +11,8 @@
     - empty_message: str - custom empty state message
 {% endcomment %}
 
-<div class="border-base-300 flex flex-col h-full" x-data="fileTableControls()" x-init="init()">
-  <div class="card-body p-0 flex flex-col flex-1 ">
+<div class="border-base-300 flex flex-col flex-1 min-h-0" x-data="fileTableControls()" x-init="init()">
+  <div class="card-body p-0 flex flex-col flex-1 min-h-0">
     {% if nodes %}
     <div class="border-b border-base-300 bg-base-100 px-3 py-2">
       <div class="flex flex-wrap items-center gap-2">
